antex-rs/tui/src/app/tests/snapshots/antex_tui__app__tests__realtime_requests__voice_completed_after_thread_switch.snap
---
source: tui/src/app/tests/realtime_requests.rs
expression: "normalize_voice_snapshot_directory(&rendered, &app.config.cwd)"
---
 ▀▄       ▄▀
  ▄▀█████▀▄    ╭─ alchemmist antex · unknown ─────╮
▄█▀▀█████▀▀█▄  │  gpt-test                        │
▀▀▄▄▀▀▀▀▀▄▄▀▀  │  /tmp/project                    │
  ██  ▄  ██    ╰──────────────────────────────────╯
   ▀▀▀ ▀▀▀

  ✦ alchemmist feature: Test feature tip.

  To get started, describe a task or try one of these commands:

  /init - create an AGENTS.md file with instructions for Antex
  /status - show current session configuration
  /permissions - choose what Antex is allowed to do
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues
• Earlier answer
• spoken complete

 ┃ Later typed question
